# aicodereview

./: .aicr.yaml  .env.example  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
scripts/: release.py
src/aicr/: __init__.py  analyze.py  cache.py  cli.py  config.py  engine.py  models.py  scan.py
src/aicr/diff/: __init__.py  chunk.py  parser.py  source.py
src/aicr/hooks/: __init__.py  install.py  pre-commit-template.sh
src/aicr/prompts/: __init__.py  builder.py
src/aicr/prompts/templates/: bugs.txt  grounding.txt  readability.txt  security.txt  style.txt  system_base.txt
src/aicr/providers/: __init__.py  base.py  gemini.py  ollama.py  openrouter.py  registry.py
src/aicr/report/: __init__.py  cli_renderer.py  json_renderer.py  sarif_renderer.py
tests/: conftest.py  test_analyze.py  test_cache.py  test_chunk.py  test_cli.py  test_config.py  test_diff_parser.py  test_diff_source.py  test_engine.py  test_progress.py  test_prompt_builder.py  test_providers.py  test_providers_http.py  test_release.py  test_report.py  test_sarif.py  test_scan.py  test_usage.py
tests/fixtures/sample_diffs/: binary.diff  multi_file.diff  single_file.diff
