[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# NOTE: `ai-code-review` on PyPI is an unrelated project — do NOT use it.
# This distribution is named `aicr-review`; the installed command is `aicr`.
name = "aicr-review"
version = "0.4.2"

description = "Local-first AI code review assistant that reviews your staged git diff before you commit."
readme = "README.md"

requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "aicodereview contributors" }]
keywords = ["code-review", "git", "pre-commit", "llm", "ai", "openrouter", "ollama"]

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "unidiff>=0.7.5",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]


[project.scripts]
aicr = "aicr.cli:cli"

[project.urls]
Homepage = "https://github.com/iammarxg/aicodereview"
Repository = "https://github.com/iammarxg/aicodereview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aicr = ["prompts/templates/*.txt", "hooks/*.sh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["unidiff", "unidiff.*"]
ignore_missing_imports = true

